fix(): no JS on homepage banner, spacing on entry title

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_directories.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_directories.scss
@@ -215,6 +215,12 @@
         height: auto;
     }
 
+    &__profile {
+        &-image {
+            margin-top: 1.3em;
+        }
+    }
+
     &__filter {
         display: flex;
         margin-left: 0;
